refactoring, created css file, and basic styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,12 +5,10 @@
     <title>Server-Side Calculator</title>    
     <script defer src="scripts/axios.js"></script>
     <script defer src="scripts/client.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./style/style.css">
   </head>
   <body>
     <h1>Server-Side Calculator</h1>
-
-
-    <p id="current-operator"></p>
 
     <form data-testid="calculator">
       <input id="numOne" data-testid="numOne" placeholder="First Number" type="number">
