now completing tests

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,6 +21,40 @@
       <button onClick="clearButton(event)">C</button>
     </form>
 
+
+    <!-- <form>
+      <input type="text" readonly>
+      <table>
+        <tbody>
+          <tr>
+            <td><button>7</button></td>
+            <td><button>8</button></td>
+            <td><button>9</button></td>
+            <td><button>+</button></td>
+          </tr>
+          <tr>
+            <td><button>4</button></td>
+            <td><button>5</button></td>
+            <td><button>6</button></td>
+            <td><button>-</button></td>
+          </tr>
+          <tr>
+            <td><button>1</button></td>
+            <td><button>2</button></td>
+            <td><button>3</button></td>
+            <td><button>*</button></td>
+          </tr>
+          <tr>
+            <td><button>0</button></td>
+            <td><button>.</button></td>
+            <td><button>=</button></td>
+            <td><button>/</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </form> -->
+
+
     <section id="recentResult" data-testid="recentResult">
       <!-- The most recent calculation result goes here. -->
     </section>
