Interesting error with the safetyCheck function at this point

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,21 +11,6 @@
 
 <body>
   <h1>Server-Side Calculator</h1>
-
-<!-- This is the code for the base goals. -->
-  
-  <!-- <form data-testid="calculator">
-      <input id="numOne" data-testid="numOne" placeholder="First Number" type="number">
-      <button onClick="plusButton(event)">+</button>
-      <button onClick="minusButton(event)">-</button>
-      <button onClick="multiplyButton(event)">*</button>
-      <button onClick="divideButton(event)">/</button>
-      <input id="numTwo" data-testid="numTwo" placeholder="Second Number" type="number">
-      <button onClick="equalsButton(event)">=</button>
-      <button onClick="clearButton(event)">C</button>
-    </form> -->
-
-
   <form>
     <input type="text" readonly="true" id="currentCalc">
     <table>
@@ -35,24 +20,30 @@
           <td><button onClick="numButton(event, 8)">8</button></td>
           <td><button onClick="numButton(event, 9)">9</button></td>
           <td><button onClick="operButton(event, `+`)">+</button></td>
+          <td><button onClick="backButton(event)">🔙</button></td>
+          
         </tr>
         <tr>
           <td><button onClick="numButton(event, 4)">4</button></td>
           <td><button onClick="numButton(event, 5)">5</button></td>
           <td><button onClick="numButton(event, 6)">6</button></td>
           <td><button onClick="operButton(event, `-`)">-</button></td>
+          <td><button onClick="clearButton(event)">C</button></td>
         </tr>
         <tr>
           <td><button onClick="numButton(event, 1)">1</button></td>
           <td><button onClick="numButton(event, 2)">2</button></td>
           <td><button onClick="numButton(event, 3)">3</button></td>
           <td><button onClick="operButton(event, `*`)">*</button></td>
+          <td><button onClick="paraButton(event, `left`)">(</button></td>
         </tr>
         <tr>
           <td><button onClick="numButton(event, 0)">0</button></td>
           <td><button onClick="numButton(event, `.`)">.</button></td>
           <td><button onClick="equalsButton(event)">=</button></td>
           <td><button onClick="operButton(event, `/`)">/</button></td>
+          <td><button onClick="paraButton(event, `right`)">)</button></td>
+          
         </tr>
       </tbody>
     </table>
@@ -63,7 +54,7 @@
     <!-- The most recent calculation result goes here. -->
     <h2 id="recentResult"></h2>
   </section>
-
+  <button onClick="deleteHistory()">Delete Result History</button>
   <section data-testid="resultHistory">
     <ul id="resultHistory">
 
