removed some extra files, updated readme, partially implemented testing

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <h1>Server-Side Calculator</h1>
-  <form>
-    <input type="text" readonly="true" id="currentCalc">
+  <form data-testid="calculator">
+    <input data-testid="inputNum" type="text" readonly="true" id="currentCalc">
     <table>
       <tbody>
         <tr>
